--- a/e2e_samples/parking_sensors/databricks/config/cluster.config.template.json
+++ b/e2e_samples/parking_sensors/databricks/config/cluster.config.template.json
@@ -2,8 +2,8 @@
     "cluster_name": "__REPLACE_CLUSTER_NAME__",
     "autoscale": { "min_workers": 1, "max_workers": 2 },
     "spark_version": "14.3.x-scala2.12",
-    "autotermination_minutes": 30,
-    "node_type_id": "Standard_DC4as_v5",
+    "autotermination_minutes": 15,
+    "node_type_id": "Standard_DS3_v2",
     "data_security_mode": "SINGLE_USER",
     "runtime_engine": "PHOTON",
     "spark_env_vars": {
