--- a/e2e_samples/parking_sensors/devops/azure-pipelines-cd-release.yml
+++ b/e2e_samples/parking_sensors/devops/azure-pipelines-cd-release.yml
@@ -5,7 +5,7 @@ pr: none
 resources:
   pipelines:
   - pipeline: ciartifacts
-    source: mdwdops-ci-artifacts
+    source: mdedops-ci-artifacts
     trigger: 
       branches:
       - main
@@ -19,8 +19,8 @@ stages:
 - stage: deploy_to_dev
   displayName: 'Deploy to DEV'
   variables:
-  - group: mdwdops-release-dev
-  - group: mdwdops-secrets-dev
+  - group: mdedops-release-dev
+  - group: mdedops-secrets-dev
   jobs:
   - template: templates/jobs/deploy-databricks-job.yml
     parameters:
@@ -29,17 +29,17 @@ stages:
   - template: templates/jobs/deploy-azuresqldb-job.yml
     parameters:
       environmentName: 'DEV'
-      serviceConnection: 'mdwdops-serviceconnection-dev'
+      serviceConnection: 'mdedops-serviceconnection-dev'
   - template: templates/jobs/deploy-adf-job.yml
     parameters:
       environmentName: 'DEV'
-      serviceConnection: 'mdwdops-serviceconnection-dev'
+      serviceConnection: 'mdedops-serviceconnection-dev'
       
 - stage: deploy_to_stg
   displayName: 'Deploy to Stage'
   variables:
-  - group: mdwdops-release-stg
-  - group: mdwdops-secrets-stg
+  - group: mdedops-release-stg
+  - group: mdedops-secrets-stg
   jobs: 
   - template: templates/jobs/deploy-databricks-job.yml
     parameters:
@@ -48,19 +48,19 @@ stages:
   - template: templates/jobs/deploy-azuresqldb-job.yml
     parameters:
       environmentName: 'STG'
-      serviceConnection: 'mdwdops-serviceconnection-stg'
+      serviceConnection: 'mdedops-serviceconnection-stg'
   - template: templates/jobs/deploy-adf-job.yml
     parameters:
       environmentName: 'STG'
-      serviceConnection: 'mdwdops-serviceconnection-stg'
+      serviceConnection: 'mdedops-serviceconnection-stg'
   # Integration tests
   - template: templates/jobs/integration-tests-job.yml
 
 - stage: deploy_to_prod
   displayName: 'Deploy to Prod'
   variables:
-  - group: mdwdops-release-prod
-  - group: mdwdops-secrets-prod
+  - group: mdedops-release-prod
+  - group: mdedops-secrets-prod
   jobs: 
   - template: templates/jobs/deploy-databricks-job.yml
     parameters:
@@ -69,8 +69,8 @@ stages:
   - template: templates/jobs/deploy-azuresqldb-job.yml
     parameters:
       environmentName: 'PROD'
-      serviceConnection: 'mdwdops-serviceconnection-prod'
+      serviceConnection: 'mdedops-serviceconnection-prod'
   - template: templates/jobs/deploy-adf-job.yml
     parameters:
       environmentName: 'PROD'
-      serviceConnection: 'mdwdops-serviceconnection-prod'
+      serviceConnection: 'mdedops-serviceconnection-prod'
