--- a/e2e_samples/parking_sensors/devops/azure-pipelines-ci-artifacts.yml
+++ b/e2e_samples/parking_sensors/devops/azure-pipelines-ci-artifacts.yml
@@ -25,7 +25,7 @@ stages:
 - stage: 'publish_artifacts'
   displayName: 'Publish Build Artifacts'
   variables:
-  - group: mdwdops-secrets-dev
+  - group: mdedops-secrets-dev
   jobs:
   - job: 'publish_python_packages'
     displayName: 'Publish Python Packages'
